rebuild documentation site and restore root README
- Rebrand VitePress site into the project's own public docs
- Add architecture, configuration and packaging guides
- Drop legacy upstream pages, media and node_modules from tracking
- Ignore vitepress cache/dist artifacts via .gitignore
- Rewrite root README as the repository overview